# CleverPlus

./: .env.example  .gitignore  Readme.md  alembic.ini  docker-compose.yml  health-check.bat  pyproject.toml  setup-project.bat  start-dev.bat  start-services.bat  stop-services.bat
apps/customer_support/: main.py
docs/: README.md
docs/architecture/: deployment-strategy.md  monorepo-structure.md  overview.md  shared-components.md
docs/core-technologies/: alembic-migrations.md  caching-strategy.md  configuration-management.md  observability.md  pool_model_rls.md  smart-router.md
docs/data-layer/: database-design.md  migration-workflows.md  performance-optimization.md  pool-model_rls.md  tenant-isolation.md
docs/integrations/: ai-providers.md  external-services.md  mcp-framework.md  webhooks-events.md
docs/projects/customer-support/: agents.md  architecture.md  deployment.md
docs/projects/internal-sales/: agents.md  architecture.md  deployment.md
docs/security/: api-security.md  audit-logging.md  rbac-implementation.md  tenant-security.md
migrations/: env.py
migrations/versions/: 2025_09_17_1855-8f6376e35fbf_create_rls_tables_with_enums.py
tools/build-scripts/: health-check.bat  setup-project.bat  start-dev.bat  start-services.bat  stop-services.bat
tools/database/: 01-init-rls-users.sql
